--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+:root{
+
+  --primary: #0a0e11;
+  --secondary: black;
+  --tertiary: #06080A;
+  --fontPrimary: white;
+  
+  --subColor: rgb(16,215,255);
+  --subColor2: rgb(255, 93, 120);
+  --subColor3: rgb(135, 255, 135);
+  
+  --font1: Helvetica;
+  --font2: 'Bebas Neue';
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +28,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.background{
+  background-color: black;
 }
