home styles and animations

--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -1,8 +1,21 @@
 
-
-.nav-bar{
-
+.nav-overlay{
+    width: 0%;
+    height: 100vh;
+    z-index: 999;
+    position: fixed;
+    top:0;
+    background-color: black;
+    opacity: 0;
+    transition-duration:850ms;
 }
+
+.nav-overlay.active{
+    opacity: 0.7;
+    transition-duration:850ms;
+    width: 100%;
+}
+
 
 .nav-menu{
     z-index: 1000;
@@ -21,6 +34,7 @@
 .nav-menu.active{
     left: 0;
     transition-duration:350ms;
+
 }
 
 
@@ -34,7 +48,8 @@
 .nav-menu-items{
     list-style-type: none;
     width: 100%;
-    padding-top: 120px;
+    padding-top: 150px;
+    
 }
 
 
@@ -63,7 +78,6 @@
 .nav-logo-container{
     z-index: 10000;
     position: relative;
-    z-index: 10000;
     padding: 1%;
     background-color: var(--primary);
     border-bottom: 3px solid var(--fontPrimary);
